test/integration/bad/reduce_sum/stanc.expected
  $ ../../../../../install/default/bin/stanc bad_args_length_mismatch.stan

Semantic error in 'bad_args_length_mismatch.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_args_length_mismatch2.stan

Semantic error in 'bad_args_length_mismatch2.stan', line 12, column 12 to column 47:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_fun_first_arg.stan

Semantic error in 'bad_fun_first_arg.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_fun_second_arg.stan

Semantic error in 'bad_fun_second_arg.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_fun_slice_and_slice_dont_match.stan

Semantic error in 'bad_fun_slice_and_slice_dont_match.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types.stan

Semantic error in 'bad_non_matching_arg_types.stan', line 16, column 14 to column 47:
   -------------------------------------------------
    14:  
    15:  model {
    16:      target += reduce_sum(my_func, a, 1, 0.0, b);
                       ^
    17:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types2.stan

Semantic error in 'bad_non_matching_arg_types2.stan', line 12, column 14 to column 47:
   -------------------------------------------------
    10:  
    11:  model {
    12:      target += reduce_sum(my_func, a, 1, 0.0, 0);
                       ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types3.stan

Semantic error in 'bad_non_matching_arg_types3.stan', line 13, column 14 to column 47:
   -------------------------------------------------
    11:  
    12:  model {
    13:      target += reduce_sum(my_func, a, 1, 0.0, b);
                       ^
    14:  }
   -------------------------------------------------

Illegal use of reduce_sum!

  $ ../../../../../install/default/bin/stanc bad_not_slice_type.stan

Semantic error in 'bad_not_slice_type.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Illegal use of reduce_sum!

